--- a/front/index.html
+++ b/front/index.html
@@ -1,4 +1,5 @@
 <html>
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -18,14 +19,16 @@
     <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css">
     <!--<link rel="stylesheet" href="assets/style/css/custom.css">-->
 </head>
-<body style="padding-top:5rem">
-<pulpe-cmp>
-    You will see me while Angular starts the app!
-</pulpe-cmp>
 
-<script src="node_modules/jquery/dist/jquery.min.js"></script>
-<script src="node_modules/mdbootstrap/js/tether.min.js"></script>
-<script src="node_modules/mdbootstrap/js/bootstrap.min.js"></script>
-<script src="node_modules/mdbootstrap/js/mdb.min.js"></script>
+<body style="padding-top:5rem">
+    <pulpe-cmp>
+        Chargement de l'application
+    </pulpe-cmp>
+
+    <script src="node_modules/jquery/dist/jquery.min.js"></script>
+    <script src="node_modules/mdbootstrap/js/tether.min.js"></script>
+    <script src="node_modules/mdbootstrap/js/bootstrap.min.js"></script>
+    <script src="node_modules/mdbootstrap/js/mdb.min.js"></script>
 </body>
+
 </html>
