--- a/front/index.html
+++ b/front/index.html
@@ -20,9 +20,10 @@
     <link href="node_modules/@angular/material/core/theming/prebuilt/indigo-pink.css" rel="stylesheet">
 
     <!--<link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">-->
-    <link rel="stylesheet" href="node_modules/daemonite-material/css/material.min.css">
+    <link rel="stylesheet" href="assets/style/material-bootstrap-custom.css">
     <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css">
-    <link rel="stylesheet" href="assets/style/css/custom.css">
+    <link rel="stylesheet" href="assets/style/custom.css">
+    <link rel="stylesheet" href="assets/style/angular-material-custom.css">
 </head>
 
 <body style="padding-top:5rem">
