--- a/front/src/index.html
+++ b/front/src/index.html
@@ -11,10 +11,14 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
   <link href="node_modules/@angular/material/core/theming/prebuilt/indigo-pink.css" rel="stylesheet">
-  <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css">
+  <link rel="stylesheet" href="../node_modules/font-awesome/css/font-awesome.min.css">
+  <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/style/material-bootstrap-custom.css">
   <link rel="stylesheet" href="assets/style/custom.css">
   <link rel="stylesheet" href="assets/style/angular-material-custom.css">
+  <link rel="stylesheet" href="../node_modules/ionicons/dist/css/ionicons.min.css">
+  <link rel="stylesheet" href="assets/fonts/fitness-font/style.css">
+
 </head>
 
 <body>
@@ -23,6 +27,7 @@
   <script src="node_modules/jquery/dist/jquery.min.js"></script>
   <script src="node_modules/tether/dist/js/tether.min.js"></script>
   <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+  <script src="../node_modules/chart.js/dist/Chart.bundle.min.js"></script>
 </body>
 
 </html>
