Transform less to sass, program updated

--- a/front/src/index.html
+++ b/front/src/index.html
@@ -18,6 +18,7 @@
   <link rel="stylesheet" href="assets/style/angular-material-custom.css">
   <link rel="stylesheet" href="../node_modules/ionicons/dist/css/ionicons.min.css">
   <link rel="stylesheet" href="assets/fonts/fitness-font/style.css">
+  <link rel="stylesheet" href="assets/style/bootstrap-custom.css">
 
 </head>
 
