Program worked with percentage of exercises dynamically calculated Small refactor of programService Some fonts added

--- a/front/src/index.html
+++ b/front/src/index.html
@@ -16,7 +16,7 @@
   <link rel="stylesheet" href="assets/style/material-bootstrap-custom.css">
   <link rel="stylesheet" href="assets/style/custom.css">
   <link rel="stylesheet" href="assets/style/angular-material-custom.css">
-  <link rel="stylesheet" href="../node_modules/ionicons/dist/css/ionicons.min.css">
+  <link rel="stylesheet" href="assets/fonts/ionicons-2.0.1/css/ionicons.min.css">
   <link rel="stylesheet" href="assets/fonts/fitness-font/style.css">
   <link rel="stylesheet" href="assets/style/bootstrap-custom.css">
 
