- Authentication service layer - Authentication guard - Route securisation - Loader added

--- a/front/src/index.html
+++ b/front/src/index.html
@@ -19,6 +19,7 @@
   <link rel="stylesheet" href="assets/fonts/ionicons-2.0.1/css/ionicons.min.css">
   <link rel="stylesheet" href="assets/fonts/fitness-font/style.css">
   <link rel="stylesheet" href="assets/style/bootstrap-custom.css">
+  <link rel="stylesheet" href="../node_modules/ng2-slim-loading-bar/style.css">
 
 </head>
 
