--- a/front/src/index.html
+++ b/front/src/index.html
@@ -10,9 +10,9 @@
     <link rel="icon" type="image/x-icon" href="favicon.ico">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
-    <link href="node_modules/@angular/material/core/theming/prebuilt/indigo-pink.css" rel="stylesheet">
+    <link rel="stylesheet" href="../node_modules/@angular/material/core/theming/prebuilt/indigo-pink.css">
     <link rel="stylesheet" href="../node_modules/font-awesome/css/font-awesome.min.css">
-    <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/style/material-bootstrap-custom.css">
     <link rel="stylesheet" href="assets/style/custom.css">
     <link rel="stylesheet" href="assets/style/angular-material-custom.css">
@@ -20,7 +20,7 @@
     <link rel="stylesheet" href="assets/fonts/fitness-font/style.css">
     <link rel="stylesheet" href="assets/style/bootstrap-custom.css">
     <link rel="stylesheet" href="../node_modules/ng2-slim-loading-bar/style.css">
-
+    <link rel="stylesheet" href="../node_modules/sweetalert2/dist/sweetalert2.min.css">
 </head>
 
 <body>
@@ -32,11 +32,11 @@
     <h1 class="text-primary pulpe-brand text-center" href="#">Pulpe</h1>
 </app-root>
 
-<script src="node_modules/jquery/dist/jquery.min.js"></script>
-<script src="node_modules/tether/dist/js/tether.min.js"></script>
-<script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+<script src="../node_modules/jquery/dist/jquery.min.js"></script>
+<script src="../node_modules/tether/dist/js/tether.min.js"></script>
+<script src="../node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
 <script src="../node_modules/chart.js/dist/Chart.bundle.min.js"></script>
-
+<script src="../node_modules/sweetalert2/dist/sweetalert2.min.js"></script>
 </body>
 
 </html>
