--- a/mobile/src/pages/login/login.html
+++ b/mobile/src/pages/login/login.html
@@ -23,12 +23,12 @@
 
       <ion-item>
         <ion-label>Se souvenir de moi</ion-label>
-        <ion-checkbox [(ngModel)]="rememberMe" name="rememberMe"></ion-checkbox>
+        <ion-checkbox [(ngModel)]="account.rememberMe" name="rememberMe"></ion-checkbox>
       </ion-item>
 
 
       <div padding>
-        <button ion-button color="primary" block>{{ 'LOGIN_BUTTON' | translate }}</button>
+        <button ion-button color="secondary" block>{{ 'LOGIN_BUTTON' | translate }}</button>
       </div>
 
     </ion-list>
