--- a/mobile/src/pages/session/session.html
+++ b/mobile/src/pages/session/session.html
@@ -4,6 +4,11 @@
             <ion-icon name="menu"></ion-icon>
         </button>
         <ion-title>{{ 'SESSION_TITLE' | translate }}</ion-title>
+        <ion-buttons end>
+            <button ion-button icon-only (click)="openMoresOptions()">
+                <ion-icon name="more"></ion-icon>
+            </button>
+        </ion-buttons>
     </ion-navbar>
 </ion-header>
 
@@ -37,3 +42,7 @@
         </ion-row>
     </ng-template>
 </ion-content>
+
+<ion-select #moreOptions  interface="action-sheet">
+    <ion-option>Changer de séance</ion-option>
+</ion-select>
